Search name/desc of statues using Elasticsearch + job scheduler for building statue cluster

--- a/views/statueList.ejs
+++ b/views/statueList.ejs
@@ -11,10 +11,6 @@
       <h1>Statue List</h1>
       <form action="/statues/search" method="GET" class="col-sm-12">
         <div class="input-group mt-3 mb-3">
-          <select name="searchCategory" class="col-sm-3 custom-select">
-            <option value="name" <%= searchCategory && searchCategory === 'name' ? 'selected' : '' %>>Name</option>
-            <option value="description" <%= searchCategory && searchCategory === 'description' ? 'selected' : '' %>>Description</option>
-          </select>
           <input type="text" name="q" value="<%= query ? query : '' %>" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="search-statue" />
           <div class="input-group-append">
             <input type="submit" value="Search" class="btn btn-outline-secondary" />
@@ -152,8 +148,11 @@
         }
       }
     };
-    $(window).bind('scroll', bindScroll);
-    bindScroll();
+
+    <% if (!query) { %>
+      $(window).bind('scroll', bindScroll);
+      bindScroll();
+    <% } %>
     
   });
 </script>
