--- a/scss/header.scss
+++ b/scss/header.scss
@@ -25,7 +25,7 @@
     a {
       border-radius: 0;
       color: #262626;
-      &:hover {
+      &:hover, &.active {
         background: none repeat scroll 0 0 #262626;
         color: #FFFFFF;
         transition: background 0.3s ease 0s;
