Clean up isAdminUser local variables

--- a/views/partials/statueCardContainer.ejs
+++ b/views/partials/statueCardContainer.ejs
@@ -13,8 +13,7 @@
       <%- include('statueCard', {
         statueId: sId,
         statue: statues[sId],
-        map: maps[sId],
-        isAdminUser: isAdminUser
+        map: maps[sId]
       }) %>
     </div>
   <% } %>
