--- a/views/partials/statueCardContainer.ejs
+++ b/views/partials/statueCardContainer.ejs
@@ -13,7 +13,7 @@
       <%- include('statueCard', {
         statueId: sId,
         statue: statues[sId],
-        map: maps[sId]
+        location: maps[sId].location
       }) %>
     </div>
   <% } %>
