--- a/views/login.ejs
+++ b/views/login.ejs
@@ -22,7 +22,7 @@
       <button type="submit" class="btn btn-primary w-100">Submit</button>
       <% if (error) { %>
         <div class="alert alert-danger" role="alert">
-          <%= error %>
+          <%- error %>
         </div>
       <% } %>
     </form>
