--- a/scss/statue.scss
+++ b/scss/statue.scss
@@ -1,10 +1,10 @@
 $flag-color: #f8d7da;
 $flag-font-color: #721c24;
 $flag-border-color: #f5c6cb;
-
 $private-color: #cce5ff;
 $private-font-color: #004085;
 $private-border-color: #b8daff;
+$tag-colors: red, orange, green, blue, purple;
 
 .visible-option {
   border: 1px solid $private-border-color;
@@ -51,6 +51,20 @@ form {
     }
     .flagged {
       background-color: $flag-color;
+    }
+  }
+
+  .statue-tag-container {
+    span {
+      @for $i from 0 to length($tag-colors) {
+        &:nth-child(#{$i}) {
+          border: 1px solid lighten(nth($tag-colors, random(length($tag-colors))), 20%);
+        }
+      }
+      border-radius: 5px;
+      padding: 1px 5px;
+      vertical-align: top;
+      font-size: 12px;
     }
   }
 
