--- a/scss/admin.scss
+++ b/scss/admin.scss
@@ -2,5 +2,18 @@
   display: inline-block;
   button {
     margin-left: 10px;
+
   }
+}
+
+.admin-container {
+    display: inline-block;
+    position: relative;
+    text-align: center;
+}
+
+.admin-objects {
+    position: relative;
+    text-align: center;
+    padding: 20px
 }
