--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,14 +1,6 @@
-.admin-list-container {
-  display: inline-block; }
-  .admin-list-container button {
-    margin-left: 10px; }
+.admin-container .admin-info {
+  margin-right: 5px;
+  padding: 10px 5px; }
 
-.admin-container {
-  display: inline-block;
-  position: relative;
-  text-align: center; }
-
-.admin-objects {
-  position: relative;
-  text-align: center;
-  padding: 20px; }
+.admin-container form {
+  padding: 10px 0; }
